add account endpoints to swagger
